feat: add update, delete, list companies
